fix(Gradle): Avoid a runtime warning with JDK 17
Avoid

    WARN FilenoUtil : Native subprocess control requires open access to
    the JDK IO subsystem

by adding the required options to the runtime JVM arguments.

Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>