@@ -30,6 +30,10 @@ plugins {
 
 application {
     applicationName = "ort"
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    )
     mainClass.set("org.ossreviewtoolkit.cli.OrtMainKt")
 }
 
